# bake-connect

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
app/: __init__.py  __main__.py  application.py  lifetime.py  model.py  router.py  settings.py
app/api/auth/: __init__.py  router.py  services.py
app/api/bakeries/: __init__.py  dao.py  models.py  router.py  schemas.py  services.py
app/api/monitoring/: __init__.py  router.py
app/api/orders/: __init__.py  dao.py  models.py  router.py  schemas.py  services.py
app/api/orders/builder/: __init__.py  order_builder.py
app/api/orders/states/: baking_order_state.py  base_state.py  cancelled_order_state.py  completed_order_state.py  new_order_state.py  pending_order_state.py  ready_order_state.py
app/api/products/: __init__.py  dao.py  models.py  router.py  schemas.py  services.py
app/api/users/: __init__.py  dao.py  models.py  router.py  schemas.py  services.py
app/db/: base.py
app/monitoring/: __init__.py
app/tests/products/: test_service.py
app/tests/users/: test_user_service.py
app/utils/: time_utils.py
static/: index.html  style.css
